--- a/CSS/home.css
+++ b/CSS/home.css
@@ -46,6 +46,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 2;
 }
 
 .navbar2 a {
@@ -89,6 +90,7 @@ body, html {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  z-index: 1;
 }
 
 /* Place text in the middle of the image */
