--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,5 +1,11 @@
 body { padding: 0; margin: 0 }
-#unity-container { position: absolute } 
+#unity-container { 
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  top: 50%;
+
+} 
 #unity-container.unity-desktop { left: 50%; top: 75%; transform: translate(-50%, -50%) }
 #unity-container.unity-mobile { width: 100%; height: 100% }
 #unity-canvas { background: #231F20 }
