--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,10 +1,8 @@
 body { padding: 0; margin: 0 }
 #unity-container { 
   position: absolute;
-  margin-left: auto;
-  margin-right: auto;
   top: 50%;
-
+  left: 50%;
 } 
 #unity-container.unity-desktop { left: 50%; top: 50%; transform: translate(-50%, -50%) }
 #unity-container.unity-mobile { width: 100%; height: 100% }
