--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,7 +1,6 @@
 body { padding: 0; margin: 0 }
 #unity-container { 
-  /*position: absolute; */
-  left: 100%;
+  position: absolute;
 } 
 #unity-container.unity-desktop { left: 50%; top: 50%; transform: translate(-50%, -50%) }
 #unity-container.unity-mobile { width: 100%; height: 100% }
