--- a/CSS/game.css
+++ b/CSS/game.css
@@ -133,9 +133,9 @@ div {
 }
 
 
-.accordion {
-  background-color: #eee;
-  color: #444;
+.collapsible {
+  background-color: #777;
+  color: white;
   cursor: pointer;
   padding: 18px;
   width: 100%;
@@ -143,17 +143,15 @@ div {
   text-align: left;
   outline: none;
   font-size: 15px;
-  transition: 0.4s;
 }
 
-.active, .accordion:hover {
-  background-color: #ccc;
+.active, .collapsible:hover {
+  background-color: #555;
 }
 
-.panel {
+.content {
   padding: 0 18px;
-  background-color: white;
-  max-height: 0;
+  display: none;
   overflow: hidden;
-  transition: max-height 0.2s ease-out;
+  background-color: #f1f1f1;
 }
