--- a/CSS/twg.css
+++ b/CSS/twg.css
@@ -24,17 +24,27 @@ body, html {
   outline: none;
   font-size: 15px;
 }
-
 .active, .collapsible:hover {
   background-color: #555;
 }
-
+.collapsible:after {
+  content: '\002B';
+  color: white;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+.active:after {
+  content: "\2212";
+}
 .content {
   padding: 0 18px;
-  display: none;
+  max-height: 0;
   overflow: hidden;
+  transition: max-height 0.2s ease-out;
   background-color: #f1f1f1;
 }
+
 
 /* The hero image */
 .hero-image {
