--- a/CSS/game.css
+++ b/CSS/game.css
@@ -4,44 +4,17 @@
   height: 1500px; /* Used in this example to enable scrolling */
 }
 
-
+#changelog {
+  width: 100%;
+  padding: 50px 0;
+  text-align: center;
+  background-color: #f1f1f1;
+  margin-top: 20px;
+}
 
 body, html {
     height: 100%;
     margin: 0;
-}
-
-
-.collapsible {
-  background-color: #777;
-  color: white;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-}
-.active, .collapsible:hover {
-  background-color: #555;
-}
-.collapsible:after {
-  content: '\002B';
-  color: white;
-  font-weight: bold;
-  float: right;
-  margin-left: 5px;
-}
-.active:after {
-  content: "\2212";
-}
-.content {
-  padding: 0 18px;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
-  background-color: #f1f1f1;
 }
 
 
