--- a/CSS/game.css
+++ b/CSS/game.css
@@ -79,7 +79,7 @@ div {
   position: fixed;
   z-index: 5;
   top: 0;
-  left: 0;
+/*  left: 0; */
   background-color: #111;
   overflow-x: hidden;
   transition: 0.5s;
